--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE-edge" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>zadanie domowe #1</title>
   </head>
@@ -23,24 +23,20 @@
         </nav>
       </div>
       <div>
-        <a href="mailto: info@devstudio.com">info@devstudio.com </a>
-        <a href="tel:+48 111 111 111">+48 111 111 111</a>
+        <a href="mailto:info@devstudio.com">info@devstudio.com </a>
+        <a href="tel:+48111111111">+48 111 111 111</a>
       </div>
     </header>
     <main>
       <section>
-        <h1>
-          <div>
-            <center>
-              EFEKTYWNE ROZWIĄZANIA <br />
-              DLA WASZEGO BIZNESU
-            </center>
-          </div>
-        </h1>
         <div>
-          <center>
-            <button type="button">Zamów usługę</button>
-          </center>
+          <h1>
+            EFEKTYWNE ROZWIĄZANIA <br />
+            DLA WASZEGO BIZNESU
+          </h1>
+        </div>
+        <div>
+          <button type="button">Zamów usługę</button>
         </div>
       </section>
       <section>
@@ -158,7 +154,7 @@
       </div>
       <address>m. Warszawa, Aleje Jerozolimskie 21</address>
       <a href="mailto:info@example.com">info@example.com</a>
-      <a href="tel:+48 111 111 111">+48 111 111 111</a>
+      <a href="tel:+48111111111">+48 111 111 111</a>
     </footer>
   </body>
 </html>
